[package]
name = "raft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = [ "full" ] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.7.0"
prost = "0.10"
log = "0.4"
env_logger = "0.9"
rand = "0.8.5"
lazy_static = "1.4.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
regex = "1.6.0"

[build-dependencies]
tonic-build = "0.7.0"

[workspace]
members = [
    "examples"
]