[package]
name = "raft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = [ "full" ] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.7.0"
prost = "0.10"
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
rand = "0.8.5"
lazy_static = "1.4.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
regex = "1.6.0"

[build-dependencies]
tonic-build = "0.7.0"

[[example]]
name = "tonic_server"
path = "examples/hello-tonic/tonic_server.rs"

[[example]]
name = "tonic_client"
path = "examples/hello-tonic/tonic_client.rs"

[[example]]
name = "app_admin"
path = "examples/raft-app/app_admin.rs"

[[example]]
name = "app_admin_add_server"
path = "examples/raft-app/app_admin_add_server.rs"

[[example]]
name = "app_admin_remove_server"
path = "examples/raft-app/app_admin_remove_server.rs"

[[example]]
name = "app_server1"
path = "examples/raft-app/app_server1.rs"

[[example]]
name = "app_server2"
path = "examples/raft-app/app_server2.rs"

[[example]]
name = "app_server3"
path = "examples/raft-app/app_server3.rs"

[[example]]
name = "app_server4"
path = "examples/raft-app/app_server4.rs"

[[example]]
name = "rpc_client"
path = "examples/raft-app/rpc_client.rs"