[package]
name = "examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tonic_client"
path = "src/hello-tonic/tonic_client.rs"
[[bin]]
name = "tonic_server"
path = "src/hello-tonic/tonic_server.rs"

[[bin]]
name = "app_admin"
path = "src/raft-app/app_admin.rs"
[[bin]]
name = "app_admin_add_server"
path = "src/raft-app/app_admin_add_server.rs"
[[bin]]
name = "app_admin_remove_server"
path = "src/raft-app/app_admin_remove_server.rs"
[[bin]]
name = "app_server1"
path = "src/raft-app/app_server1.rs"
[[bin]]
name = "app_server2"
path = "src/raft-app/app_server2.rs"
[[bin]]
name = "app_server3"
path = "src/raft-app/app_server3.rs"
[[bin]]
name = "app_server4"
path = "src/raft-app/app_server4.rs"
[[bin]]
name = "rpc_client"
path = "src/raft-app/rpc_client.rs"

[dependencies]
tokio = { version = "1.0", features = [ "full" ] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.7.0"
prost = "0.10"
raft = { path = "../"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"


[build-dependencies]
tonic-build = "0.7.0"